--- a/HW5/SVM.ipynb
+++ b/HW5/SVM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,11 +814,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_comb = [10, 0.01]"
+    "best_comb = [100, 0.01]"
    ]
   },
   {
@@ -849,6 +849,68 @@
     "m = svm_train(prob, f\"-q -t 4 -c {best_comb[0]}\")\n",
     "p_labels, p_acc, p_vals = svm_predict(y_test, KK, m, \"-q\")\n",
     "print(f\"kernel type: linear + RBF kernel\\taccuracy: {p_acc[0]:.2f}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### linear + polynomial + RBF kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linearPolynomialRBF(X, X_, gamma):\n",
+    "    linear = X @ X_.T\n",
+    "    polynomial = np.power((1 + gamma * (X @ X_.T)), 2)\n",
+    "    RBF = np.exp(-gamma * cdist(X, X_, 'sqeuclidean'))\n",
+    "    kernel = linear + polynomial + RBF\n",
+    "    kernel = np.hstack((np.arange(1, len(X)+1).reshape(-1, 1), kernel))\n",
+    "\n",
+    "    return kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = linearPolynomialRBF(X_train, X_train, best_comb[1])\n",
+    "KK = linearPolynomialRBF(X_test, X_train, best_comb[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kernel type: linear + polynomial + RBF kernel\taccuracy: 95.32\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = svm_problem(y_train, K, isKernel=True)\n",
+    "m = svm_train(prob, f\"-q -t 4 -c {best_comb[0]}\")\n",
+    "p_labels, p_acc, p_vals = svm_predict(y_test, KK, m, \"-q\")\n",
+    "print(f\"kernel type: linear + polynomial + RBF kernel\\taccuracy: {p_acc[0]:.2f}\")"
    ]
   }
  ],
