kernel k means finished

--- a/HW5/SVM.ipynb
+++ b/HW5/SVM.ipynb
@@ -860,6 +860,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "polynomial kernel after grid search accuracy: 23.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = svm_train(y_train, X_train, f\"-q -t 1 -d 4\")\n",
+    "p_labels, p_acc, p_vals = svm_predict(y_test, X_test, m, \"-q\")\n",
+    "print(f\"polynomial kernel after grid search accuracy: {p_acc[0]:.2f}\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -869,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,14 +914,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kernel type: linear + polynomial + RBF kernel\taccuracy: 95.32\n"
+      "kernel type: linear + polynomial + RBF kernel\taccuracy: 95.52\n"
      ]
     }
    ],
