spectral clustering finished

--- a/HW6/main.ipynb
+++ b/HW6/main.ipynb
@@ -239,7 +239,7 @@
     "        #     assigned_cluster[i] = np.argmin(euclid_dist)\n",
     "        euclid_dist = np.zeros((len(X), n_cluster))\n",
     "        for c in range(n_cluster):\n",
-    "            euclid_dist[:, c] = (euclidean(init_mean[c], X))\n",
+    "            euclid_dist[:, c] = euclidean(init_mean[c], X)\n",
     "        assigned_cluster = np.argmin(euclid_dist, axis=1)\n",
     "            \n",
     "\n",
